ordenamiento de proyecto

--- a/client/asset/css/styles.css
+++ b/client/asset/css/styles.css
@@ -35,6 +35,12 @@ header {
   height: 10vh;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus {
+    -webkit-box-shadow: 0 0 0px 1000px #3b3b3b inset;
+}
+
 /* header nav */
 .header_nav_links {
   width: 100%;
