--- a/client/asset/css/styles.css
+++ b/client/asset/css/styles.css
@@ -899,12 +899,12 @@ input[type="date"] {
   color:whitesmoke;
   padding: 10px 15px;
   border-radius: 7px;
-  background-color: #9f3647;
+  background-color: rgb(0, 105, 197);
   transition: all 500ms ease-in-out;
 }
 
 .link_movie-add:hover{
-  background-color: #912839;
+  background-color: rgb(0, 105, 197);
   color:white;
 }
 
@@ -937,11 +937,11 @@ input[type=checkbox]{
   vertical-align: middle;
   width: 18px;
   height: 18px;
-  border: 2px solid #9f3647;
+  border: 2px solid rgb(0, 105, 197);
   background-color: dimgrey;
 }
 
 input[type=checkbox]:checked{
-  background-image: url("../../asset/images/check_18.png");
+  background-image: url("../../asset/images/check_17.png");
   background-position: center;
 }
