--- a/client/asset/css/styles.css
+++ b/client/asset/css/styles.css
@@ -532,7 +532,7 @@ footer {
         margin: 5px auto;
         margin-bottom: 10px;
         border-radius: 5px;
-        border: 2px solid #9f3647;
+        border: 2px solid rgb(0, 105, 197);
         width: 80%;
         background-color: #222222;
         color: white;
@@ -548,7 +548,7 @@ footer {
         text-align: center;
         background-color: #222222;
         color: white;
-        border: 2px solid #9f3647;
+        border: 2px solid rgb(0, 105, 197);
     }
 
     label {
@@ -560,7 +560,7 @@ footer {
         padding: 10px 20px;
         font-size: 14px;
         font-weight: bold;
-        background-color: #9f3647;
+        background-color: rgb(0, 105, 197);
         color: white;
         border: none;
         cursor: pointer;
@@ -584,7 +584,7 @@ footer {
         border-radius: 10px;
         background-color: #222222;
         color: white;
-        border: 2px solid #9f3647;
+        border: 2px solid rgb(0, 105, 197);
     }
     select,
     option {
