--- a/client/asset/css/styles.css
+++ b/client/asset/css/styles.css
@@ -358,13 +358,15 @@ footer {
 .trend_container {
     position: relative;
     width: 200px;
+    min-height: 300px;
     overflow: hidden;
 }
 
 /* imágen de pelicula */
 .trend_image {
     width: 100%;
-    object-fit: contain;
+    min-height: 300px;
+    object-fit: cover;
     border-radius: 15px;
     transition: all ease-in-out 300ms;
 }
