--- a/client/asset/css/styles.css
+++ b/client/asset/css/styles.css
@@ -449,12 +449,15 @@ footer {
 .acclaimed_container {
     width: 160px;
     min-width: 160px;
+    height: 240px;
+    min-height: 240px;
 }
 
 /* Imagen aclamadas */
 .acclaimed_image {
     width: 100%;
-    object-fit: contain;
+    height: 100%;
+    object-fit: cover;
     border-radius: 10px;
 }
 
@@ -590,6 +593,7 @@ footer {
     .descripcion {
         width: 80%;
         margin: 0 auto;
+        padding: 5px 7px;
         height: 100px;
         border-radius: 10px;
         background-color: #222222;
